/*
 * Copyright 2017 Rozdoum
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

package com.architectica.socialcomponents.adapters.holders;

import android.support.v7.widget.RecyclerView;
import android.view.View;

/**
 * Created by alexey on 27.12.16.
 */

public class LoadViewHolder extends RecyclerView.ViewHolder {
    public LoadViewHolder(View itemView) {
        super(itemView);
    }
}
